@@ -167,30 +167,16 @@ void gridtestcadparameters_( void )
   double oldXYZ[3], oldT, oldUV[2];
   double newXYZ[3], newT, newUV[2];
   double dXYZ[3], dist, dT, dUV;
-  double tol = 1e-13;
+  double xyzTol, uvTol, tTol;
   AdjIterator it;
+
+  xyzTol = 1e-7;
+  uvTol  = 1e-4;
+  tTol   = 1e-4;
 
   for(global=0;global<gridGlobalNNode(grid);global++) {
     local = gridGlobal2Local(grid,global);
     if (EMPTY!=global) {
-      for ( it = adjFirst(gridEdgeAdj(grid),local); 
-	    adjValid(it); 
-	    it = adjNext(it) ){
-	edge = adjItem(it);
-	gridEdge(grid, edge, nodes, &edgeId);
-	gridNodeXYZ(grid,local,oldXYZ);
-	gridNodeT(grid,local,edgeId,&oldT);
-	gridProjectNodeToEdge(grid, local, edgeId );
-	gridNodeXYZ(grid,local,newXYZ);
-	gridNodeT(grid,local,edgeId,&newT);
-	gridSubtractVector(newXYZ,oldXYZ,dXYZ);
-	dist = gridVectorLength(dXYZ);
-	dT = ABS(newT-oldT);
-	if (dist>tol || dT > tol)
-	  printf("%03d global %d local %d edge %d dXYZ %e dT %e\n",
-		 gridPartId(grid), global, local, edgeId,
-		 dist, dT);
-      }
       for ( it = adjFirst(gridFaceAdj(grid),local); 
 	    adjValid(it); 
 	    it = adjNext(it) ){
@@ -205,10 +191,28 @@ void gridtestcadparameters_( void )
 	dist = gridVectorLength(dXYZ);
 	dUV = sqrt( (newUV[0]-oldUV[0])*(newUV[0]-oldUV[0]) +
 		    (newUV[1]-oldUV[1])*(newUV[1]-oldUV[1]) );
-	if (dist>tol || dUV > tol)
+	if (dist>xyzTol || dUV > uvTol)
 	  printf("%03d global %d local %d face %d dXYZ %e dUV %e\n",
 		 gridPartId(grid), global, local, faceId,
 		 dist, dUV);
+      }
+      for ( it = adjFirst(gridEdgeAdj(grid),local); 
+	    adjValid(it); 
+	    it = adjNext(it) ){
+	edge = adjItem(it);
+	gridEdge(grid, edge, nodes, &edgeId);
+	gridNodeXYZ(grid,local,oldXYZ);
+	gridNodeT(grid,local,edgeId,&oldT);
+	gridProjectNodeToEdge(grid, local, edgeId );
+	gridNodeXYZ(grid,local,newXYZ);
+	gridNodeT(grid,local,edgeId,&newT);
+	gridSubtractVector(newXYZ,oldXYZ,dXYZ);
+	dist = gridVectorLength(dXYZ);
+	dT = ABS(newT-oldT);
+	if (dist>xyzTol || dT > tTol)
+	  printf("%03d global %d local %d edge %d dXYZ %e dT %e\n",
+		 gridPartId(grid), global, local, edgeId,
+		 dist, dT);
       }
     }
   }
